syntax = "proto3";

package auction;

service AuctionsService {
    rpc IsAuctionRunning (IsAuctionRunningRequest) returns (IsAuctionRunningResponse);
}

message IsAuctionRunningRequest {
    uint32 auctionId = 1;
}

message IsAuctionRunningResponse {
    bool running = 1;
}